<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PodListen</string>
    <string name="enable_download_manager">Podlisten needs \'Download manager\' system app to load episodes. Please, enable it in Settings->Apps->All></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hour_abbreviation">h</string>
    <string name="minute_abbreviation">m</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_new_episodes">New episodes</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="podcast_already_subscribed">Already subscribed to %s</string>
    <string name="podcast_subscribe_failed">Failed to subscribe</string>
    <string name="podcast_delete_question">Unsubscribe from %s?</string>
    <string name="podcast_delete_question_no_title">Unsubscribe from this podcast?</string>
    <string name="podcast_no_title">No title</string>
    <string name="podcast_refresh_failed">Refresh failed: %s</string>
    <string name="podcast_not_loaded_yet">Feed isn\'t loaded yet</string>
    <string name="podcast_refresh_time">Refreshed %s</string>
    <string name="podcast_image_description">Image of this podcast if any</string>
    <string name="podcast_button_description">Show episodes of this feed</string>
    <string name="episode_no_title">NO TITLE</string>
    <string name="episode_downloading">Downloading episode %s</string>
    <string name="episode_delete_question">Delete episode?</string>
    <string name="episode_deleted">Episode deleted: %s</string>
    <string name="episode_deleted_undo">Undo</string>
    <string name="episode_deleted_subscription">Deleted subscription</string>
    <string name="episode_published">Published %s</string>
    <string name="episode_image_description">Image of this episode if any</string>
    <string name="episode_button_description">Add, download or play episode</string>
    <string name="episode_action_download">Download episode</string>
    <string name="episode_action_add">Add this episode to playlist</string>
    <string name="episode_action_play">Play this episode</string>
    <string name="episode_action_pause">Pause</string>
    <string name="refresh_mode_week">Add last week episodes</string>
    <string name="refresh_mode_month">Add last month episodes</string>
    <string name="refresh_mode_year">Add last year episodes</string>
    <string name="refresh_mode_all">Add all episodes</string>
    <string name="refresh_mode_none">Don\'t add old episodes</string>
    <string name="refresh_mode_last">Add last episode</string>
    <string name="refresh_mode_last_2">Add 2 last episodes</string>
    <string name="refresh_mode_last_3">Add 3 last episodes</string>
    <string name="refresh_mode_last_4">Add 4 last episodes</string>
    <string name="refresh_mode_last_5">Add 5 last episodes</string>
    <string name="refresh_mode_last_10">Add 10 last episodes</string>
    <string name="refresh_mode_last_20">Add 20 last episodes</string>
    <string name="refresh_mode_last_50">Add 50 last episodes</string>
    <string name="refresh_mode_last_100">Add 100 last episodes</string>
    <string name="subscribe_dialog_edit_text_hint">Paste podcast URL here</string>
    <string name="subscribe_dialog_on_first_load_text">How much episodes to add:</string>
    <string name="subscribe_dialog_subscribe_button">SUBSCRIBE</string>
    <string name="subscribe_dialog_install_file_manager">Please install file manager to use this feature.</string>
    <string name="subscribe_dialog_opml_failed">Failed to subscribe to all feeds of this OPML</string>
    <string name="subscribe_dialog_opml_subscriptions_added">"Subscriptions added: %1$d/%2$d"</string>
    <string name="subscribe_dialog_opml_empty">This OPML doesn\'t contain any feeds</string>
    <string name="subscribe_dialog_title">Add subscription</string>
    <string name="subscribe_dialog_select_opml_prompt">Select OPML File</string>
    <string name="subscribe_dialog_import_opml">Import OPML</string>
    <string name="subscribe_dialog_search_db">Search database</string>
    <string name="preferences_title">Preferences</string>
    <string name="preferences_network_title">Network</string>
    <string name="preferences_playback_title">Playback</string>
    <string name="preferences_other_title">Other</string>
    <string name="preferences_experimental_title">Experimental</string>
    <string name="preferences_send_bug_report_title">Send bug-report</string>
    <string name="preferences_send_bug_report_summary">Send developer a email. App log and device info will be included</string>
    <string name="preferences_send_bug_report_summary_disabled">Disabled: there is no mail app installed</string>
    <string name="preferences_max_downloads_title">Max parallel downloads</string>
    <string name="preferences_max_downloads_unlimited">Unlimited</string>
    <string name="preferences_storage_location_title">Episode cache (cleared on change)</string>
    <string name="preferences_auto_download_title">Episode auto-download</string>
    <string name="preferences_auto_download_ac_title">Download on charge only</string>
    <string name="preferences_auto_download_ac_summary">Only run automatic downloads when charger is plugged</string>
    <string name="preferences_download_network_title">Download network type</string>
    <string name="preferences_opml_export_title">Export to OPML</string>
    <string name="preferences_opml_export_summary">Export your subscriptions to OPML file (accepted by most of podcast apps)</string>
    <string name="preferences_opml_export_summary_disabled">Disabled: you have no subscriptions to export</string>
    <string name="preferences_opml_export_failed">OPML export failed, sorry..</string>
    <string name="preferences_refresh_interval_title">Auto-refresh subscriptions</string>
    <string name="preferences_jump_interval_title">Jump buttons interval</string>
    <string name="preferences_on_playback_completed_title">On playback complete</string>
    <string name="preferences_pause_on_disconnect_title">Pause on headphones disconnect</string>
    <string name="preferences_pause_on_disconnect_summary">Pauses playback when user unplugs earphones or BT headset loses connection</string>
    <string name="preferences_fix_skip_ending_title">Workaround ending skip</string>
    <string name="preferences_fix_skip_ending_summary">Android system media player skips track endings on some devices. This option fixes the issue</string>
    <string name="opml_dialog_done">Done</string>
    <string name="opml_dialog_message">Your subscriptions where exported to %s</string>
    <string name="opml_dialog_send">Send</string>
    <string name="opml_dialog_FMapp">Show in file manager</string>
    <string name="opml_dialog_title">Exported successfully</string>
    <string name="opml_export_file_name">PodListen_Subscriptions.opml</string>
    <string name="refresh_period_never">Never</string>
    <string name="refresh_period_hour">Hourly</string>
    <string name="refresh_period_2hours">Every 2 hours</string>
    <string name="refresh_period_3hours">Every 3 hours</string>
    <string name="refresh_period_6hours">Every 6 hours</string>
    <string name="refresh_period_12hours">Every 12 hours</string>
    <string name="refresh_period_day">Daily</string>
    <string name="refresh_period_2days">Every 2 days</string>
    <string name="refresh_period_week">Weekly</string>
    <string name="refresh_period_2weeks">Every 2 weeks</string>
    <string name="refresh_period_month">Monthly</string>
    <string name="sorting_mode_oldest_first">Sorted by date (oldest first)</string>
    <string name="sorting_mode_newest_first">Sorted by date (newest first)</string>
    <string name="sorting_mode_by_feed">Sorted by feed</string>
    <string name="sorting_mode_shortest_first">Sorted by length (shortest first)</string>
    <string name="sorting_mode_longest_first">Sorted by length (longest first)</string>
    <string name="auto_download_playlist">Episodes added to playlist</string>
    <string name="auto_download_all_new">All new episodes</string>
    <string name="auto_download_never">Never</string>
    <string name="download_network_wifi">Wi-Fi only</string>
    <string name="download_network_non_roaming">Wi-Fi and cellular, except for roaming</string>
    <string name="download_network_any">Use all networks</string>
    <string name="playback_complete_do_nothing">Do nothing</string>
    <string name="playback_complete_delete_do_nothing">Delete played episode and do nothing</string>
    <string name="playback_complete_play_next">Play next episode in playlist</string>
    <string name="playback_complete_delete_play_next">Delete played episode and play next</string>
    <string name="playback_complete_play_first">Play first episode in playlist</string>
    <string name="playback_complete_delete_play_first">Delete played episode and play first</string>
    <string name="jump_interval_10sec">10 seconds</string>
    <string name="jump_interval_20sec">20 seconds</string>
    <string name="jump_interval_30sec">30 seconds</string>
    <string name="jump_interval_1min">1 minute</string>
    <string name="jump_interval_5min">5 minutes</string>
    <string name="crash_dialog_title">PodListen has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing PodListen to stop. Please help us fix this by sending us PodListen log and anonymous information about your device. You can edit the message before sending as you wish.</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="player_stopped">Press play to start</string>
    <string name="player_empty">Playlist is empty</string>
    <string name="player_episode_does_not_exist" tools:ignore="PluralsCandidate">Episode %d doesn\'t exist</string>
    <string name="player_episode_image_description">@string/episode_image_description</string>
    <string name="player_preferences_button_description">@string/preferences_title</string>
    <string name="player_rewind_button_description">Rewind</string>
    <string name="player_forward_button_description">Skip fragment</string>
    <string name="player_play_button_description">Play or pause</string>
    <string name="player_next_button_description">@string/playback_complete_play_next</string>
    <string name="sync_database_error">DB error</string>
    <string name="sync_interrupted_by_system">Refresh interrupted by system</string>
    <string name="sync_failed">Refresh failed</string>
    <string name="sync_running">Refreshing PodListen..</string>
    <string name="sync_new_episodes">New episodes: %s</string>
    <string name="sync_feeds_synced">Feeds loaded: %d</string>
    <string name="sync_feeds_failed">Failed to load: %d</string>
    <string name="sync_finished">Podlisten refreshed</string>
    <string name="sync_feed_parsing_failed">Parsing failed: %s</string>
    <string name="sync_feed_db_error">DB error: %s</string>
    <string name="sync_feed_io_error">IO error: %s</string>
    <string name="sync_feed_synced">Loaded: %s</string>
    <string name="search_title">Search podcasts</string>
    <string name="search_subscribe_button">Subscribe to this podcast</string>
    <string name="search_unpacking_db">Preparing podcast database…</string>
    <string name="search_frequency">Frequency: %.1f episodes/month</string>
</resources>