<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_network_title">
        <ListPreference
            android:key="MAX_DOWNLOADS"
            android:summary="%s"
            android:title="@string/preferences_max_downloads_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_other_title">
        <Preference
            android:key="SEND_REPORT"
            android:summary="@string/preferences_send_bug_report_summary"
            android:title="@string/preferences_send_bug_report_title">
            <intent
                android:action="com.einmalfel.podlisten.SEND_BUG_REPORT"
                android:targetClass="com.einmalfel.podlisten.PreferencesActivity"
                android:targetPackage="com.einmalfel.podlisten"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
